# Olympic-Games-Pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: airbyte_dag.py  dbt_dag.py  extract.py  import_data_dag.py  my_simple_dbt_dag.py
dags/dbt/pipeline_olympics/: .user.yml  profiles.yml
dags/dbt/pipeline_olympics/models/marts/olympics_dashboard/: athletes_table.sql  medals_table.sql  teams_table.sql
dags/dbt/pipeline_olympics/models/staging/postgres/: postgres_models.yml  postgres_sources.yml  stg_postgres_athletes.sql  stg_postgres_medals.sql  stg_postgres_teams.sql
include/: Olympics2024.pbix  constants.py  profiles.py
pipeline_olympics/: dbt_project.yml
pipeline_olympics/docs/: homepage.md
pipeline_olympics/models/marts/: schema.yml
pipeline_olympics/models/marts/olympics_dashboard/: athletes.sql  athletes_table.sql  mart_models.yml  medalists.sql  medals.sql  medals_table.sql  olympics_dashboard_models.yml  teams.sql
pipeline_olympics/models/raw/postgres/: raw_postgres_athletes.sql  raw_postgres_medals.sql  raw_postgres_teams.sql
pipeline_olympics/models/raw/postgres/staging/postgres/: stg_postgres_athletes.sql  stg_postgres_medals.sql
pipeline_olympics/models/staging/postgres/: postgres_models.yml  postgres_sources.yml  stg_postgres_athletes.sql  stg_postgres_medals.sql  stg_postgres_teams.sql
