[tool.poetry]
name = "olympic games pipeline"
version = "0.1.0"
description = ""
authors = ["Herbert Souto <herbert-93@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
dbt-postgres = "^1.8.2"
pandas = "^2.2.2"
apache-airflow = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
