[tool.poetry]
name = "olympics games pipeline"
version = "0.1.0"
description = ""
authors = ["Herbert Souto <herbert-93@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
dbt-postgres = "^1.8.2"
pandas = "^2.2.2"
apache-airflow = "2.10.0"
pytest = "^8.3.2"
python-dotenv = "^1.0.1"
sqlalchemy = ">=1.4.36,<2.0"
psycopg2-binary = "^2.9.9"
oauth2client = "^4.1.3"
gspread = "^6.1.2"
astronomer-cosmos = "^1.6.0"
apache-airflow-providers-docker = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
